--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,16 +1,32 @@
-h1 {
+@btn-color: #009ED8;
+
+.header {
+    height: 60px;
     text-align: center;
-    display: inline-block;
     width: 100%;
-    padding: 0.4em 0;
-    margin: 0;
     background-color: #54a4ff;
     color: white;
+    h1 {
+        line-height: 60px;
+        margin: 0;
+    }
+
+    .reload {
+        width: 40px;
+        height: 40px;
+        position: fixed;
+        top: 10px;
+        right: 10px;
+        &.active {
+            transition: transform 500ms cubic-bezier(.85,-0.48,.26,.67);
+            transform: rotate(360deg);
+        }
+    }
 }
 
 .app-wrapper {
     min-width: 320px;
-    max-width: 950px;
+    max-width: 750px;
     width: 66%;
     margin: 1em auto;
     overflow: auto;
@@ -28,8 +44,8 @@ h1 {
         }
         
         h3 {
-            margin: 0;
-            display: inline-block;
+            margin: 0.5em 0;
+            text-align: center;
         }
 
         p {
@@ -37,41 +53,55 @@ h1 {
         }
     }
 
-    .check-section {
+} 
 
-        h3 {
-            margin-bottom: 1em;
-        }
+.check-section {
 
-        @btn-color: #009ED8;
+    h3 {
+        margin-bottom: 1em;
+    }
+    .btn-wrapper {
+        display: flex;
+
         button {
             cursor: pointer;
-            width: 125px;
+            flex-grow: 1;     
+            margin: 5px;    
             display: inline-block;
             -webkit-font-smoothing: antialiased;
             position: relative;
-            padding: .6em 1.4em;
+            padding: .6em;
             background: white;
             border: 2px solid @btn-color;
             color: black;
             transition: .2s;
             font-size: 0.9em;
-            &:hover {
-                background: darken(@btn-color, 10%);
+            &.active {
+                color: white;
+                background: @btn-color - 40%;
             }
-            &:focus {
-                background: darken(@btn-color, 30%);
-                outline: none;
+            &:hover {
+                color: white;
+                background: @btn-color;
+            }
+            &:active {
+                color: white;
+                background: @btn-color + 20%;
             }
         }
-        
     }
 
-    .temp-section {
-        p {
-            float: right;
-            font-size: 1.5em;
-            margin-right: 10%;
+}
+        img {
+            height: 100px;
+            width: 100%;
+            margin: 0.5em;;
+            object-fit: scale-down;
         }
+
+.temp-section {
+    p {
+        font-size: 2em;
+        text-align: center;
     }
 }
