--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -6,6 +6,10 @@
     width: 100%;
     background-color: #54a4ff;
     color: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+
     h1 {
         line-height: 60px;
         margin: 0;
@@ -28,7 +32,7 @@
     min-width: 320px;
     max-width: 750px;
     width: 66%;
-    margin: 1em auto;
+    margin: 60px auto;
     overflow: auto;
     
     
